--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,14 @@ body {
   margin: 0;
   padding: 0;
   background-color: #F3F3F3;
+  color: #000;
   font-family: futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 a {
+  color: #000;
   text-decoration: none;
+  
 }
 #header {
   display: flex;
@@ -62,4 +65,53 @@ a {
 .page-about__header__ableton-logo {
     position: absolute;
     top: 100px;
+}
+#nav-link , .more {
+    color: #ff764d;
+}
+.media {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+    position: relative;
+    width: 100%;
+
+}
+#yellow {
+    padding: 20px;
+    background-color:#fbffa7 ;
+    width: 55%;
+    height: 80vh;
+    position: absolute;
+    right: 0;
+    z-index: -1;
+}
+ #first-img{
+  position: absolute;
+  top:200px;
+  left:50px;
+  height: 70vh;
+  
+}
+
+#second-img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width:35%;
+  transform: translate(0.2%, 90%);
+  margin-right: 80px;
+
+}
+#first-img > img {
+    width: 60%;
+    height:80%;
+    object-fit: cover;
+    /* margin-left: 150px; */
+}
+
+#second-img > img {
+    object-fit: cover;
+    width: 100%;
+
 }
